--- a/land.html
+++ b/land.html
@@ -2,6 +2,4 @@
 
 <h2 id="2">2015年商品住宅成交量排名第一，2437万平方米，上涨3%。成交金额1736亿元，排名第八。平均住宅成交价7124元每平方米，小幅微跌。年底存量1787万平方米，去化周期8.2个月。</h2>
 
-<ngmusic src="http://pan.baidu.com/share/link?shareid=4082446762&uk=4232889411" loop="-1 />"
-
-<iframe width="560" height="315" src="https://www.youtube.com/embed/RiN7zmzfiWQ" frameborder="0" allowfullscreen></iframe>
+<img src="http://img2.askci.com/images/chanye/2016/3/30/3b97e62f-d212-4ad1-ba07-97f8be51199e.png" style="display:block;width:100%;margin:0 auto"/>
